--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <li class="c-nav__item"><a class="c-nav__link" href="#!">ROADMAP</a></li>
                                 <li class="c-nav__item"><a class="c-nav__link" href="#!">ICO</a></li>
                                 <li class="c-nav__item"><a class="c-nav__link" href="#!">TELEGRAM</a></li>
-                                <li class="c-nav__item"><a class="c-nav__link" href="#!">WHITEPAPER</a></li>
+                                <li class="c-nav__item"><a class="c-nav__link c-link-cta" href="#!">WHITEPAPER</a></li>
                             </ul>
                         </nav>
                     </div>
